--- a/FrontEnd/public/assets/css/vertical-layout-light/style.css
+++ b/FrontEnd/public/assets/css/vertical-layout-light/style.css
@@ -28377,11 +28377,12 @@ div.tagsinput span.tag a {
 }
 
 .auth .brand-logo {
-  margin-bottom: 2rem;
+  margin-bottom: 15px;
+  /* margin-right: 200px; */
 }
 
 .auth .brand-logo img {
-  width: 150px;
+  width: 100px;
 }
 
 .auth form .form-group {
